# ai_research_OS

./: .gitignore  Makefile  README.md  USAGE.md
backend/: .env.example  __init__.py  alembic.ini  main.py  pyproject.toml  run_dev.sh
backend/ai/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/alembic/: env.py
backend/alembic/versions/: 71ea7229814a_add_watchlist_item_priority.py  d199a3e17af8_init.py
backend/api/: __init__.py  app.py
backend/company/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/core/: base.py  config.py  crud.py  database.py  event_log.py  event_service.py  exceptions.py  interfaces.py  logging.py  observation_engine.py  scheduler.py  scheduler_jobs.py  scheduler_routes.py  security.py
backend/core/adapters/: __init__.py  akshare_mysql.py  cache.py  embedding.py  llm.py  (+3 more)
backend/dashboard/: __init__.py  routes.py  service.py
backend/document/: __init__.py  chunker.py  models.py  routes.py  schemas.py  service.py
backend/knowledge/: __init__.py  routes.py  service.py
backend/market/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/portfolio/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/research/: __init__.py  models.py  quick.py  routes.py  schemas.py  service.py  timeline.py
backend/scripts/: link_doc.py  reembed.py  seed_data.py  seed_market_data.py  test_finalize.py
backend/tests/: conftest.py  test_ai.py  test_company.py  test_core.py  test_document.py  test_knowledge.py  test_market.py  test_pdf_parser.py  test_portfolio.py  test_research.py
(+38 files in other folders)
