[project]
name = "ai-research-os"
version = "0.1.0"
description = "AI Research OS — Personal AI Investment Research Assistant"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",

    # AI / Embeddings
    "sentence-transformers>=3.0",
    "ollama>=0.4",
    "openai>=1.0",
    "langgraph>=0.2",

    # Search / Vector
    "qdrant-client>=1.11",
    "rank-bm25>=0.2",

    # Document processing
    "pymupdf>=1.24",
    "markdown>=3.0",

    # Scheduling
    "apscheduler>=3.10",

    # Utilities
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",

    # Observability
    "structlog>=24.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
